--- a/node81.html
+++ b/node81.html
@@ -136,29 +136,39 @@ Scheem Interpreter</A>
   HREF="node85.html#SECTION05442000000000000000">Karma</A>
 <UL>
 <LI><A NAME="tex2html2342"
-  HREF="node85.html#SECTION05442010000000000000">Using Karma with Mocha</A>
+  HREF="node85.html#SECTION05442010000000000000">Como Funciona</A>
 <LI><A NAME="tex2html2343"
-  HREF="node85.html#SECTION05442020000000000000">Load HTML files with Karma</A>
-</UL>
+  HREF="node85.html#SECTION05442020000000000000">Videos</A>
 <LI><A NAME="tex2html2344"
+  HREF="node85.html#SECTION05442030000000000000">Opciones en Línea de Comandos</A>
+<LI><A NAME="tex2html2345"
+  HREF="node85.html#SECTION05442040000000000000">Generando el Fichero de Configuración</A>
+<LI><A NAME="tex2html2346"
+  HREF="node85.html#SECTION05442050000000000000">Arrancando Karma. Starting Karma</A>
+<LI><A NAME="tex2html2347"
+  HREF="node85.html#SECTION05442060000000000000">Using Karma with Mocha</A>
+<LI><A NAME="tex2html2348"
+  HREF="node85.html#SECTION05442070000000000000">Load HTML files with Karma</A>
+</UL>
+<LI><A NAME="tex2html2349"
   HREF="node85.html#SECTION05443000000000000000">Grunt</A>
 <UL>
-<LI><A NAME="tex2html2345"
+<LI><A NAME="tex2html2350"
   HREF="node85.html#SECTION05443100000000000000">package.json</A>
-<LI><A NAME="tex2html2346"
+<LI><A NAME="tex2html2351"
   HREF="node85.html#SECTION05443200000000000000">Gruntfile</A>
 <UL>
-<LI><A NAME="tex2html2347"
+<LI><A NAME="tex2html2352"
   HREF="node85.html#SECTION05443210000000000000">An example Gruntfile</A>
-<LI><A NAME="tex2html2348"
+<LI><A NAME="tex2html2353"
   HREF="node85.html#SECTION05443220000000000000">The "wrapper" function</A>
-<LI><A NAME="tex2html2349"
+<LI><A NAME="tex2html2354"
   HREF="node85.html#SECTION05443230000000000000">Project and task configuration</A>
-<LI><A NAME="tex2html2350"
+<LI><A NAME="tex2html2355"
   HREF="node85.html#SECTION05443240000000000000">A simple Grunt.js example</A>
 </UL>
 </UL>
-<LI><A NAME="tex2html2351"
+<LI><A NAME="tex2html2356"
   HREF="node85.html#SECTION05444000000000000000">GitHub Project Pages</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
@@ -226,7 +236,7 @@ Scheem Interpreter</A>
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-02-06</I>
+2015-02-09</I>
 </ADDRESS>
 </BODY>
 </HTML>
