--- a/node85.html
+++ b/node85.html
@@ -27,19 +27,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2404"
+<A NAME="tex2html2409"
   HREF="node86.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2398"
+<A NAME="tex2html2403"
   HREF="node81.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2399"
   HREF="node84.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2400"
+<A NAME="tex2html2405"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2402"
+<A NAME="tex2html2407"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -79,18 +79,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2405"
+<B> Sig:</B> <A NAME="tex2html2410"
   HREF="node86.html">Functions and all that</A>
-<B>Sup:</B> <A NAME="tex2html2399"
+<B>Sup:</B> <A NAME="tex2html2404"
   HREF="node81.html">Scheem Interpreter</A>
-<B> Ant:</B> <A NAME="tex2html2395"
+<B> Ant:</B> <A NAME="tex2html2400"
   HREF="node84.html">Setting Values</A>
 <B> Con:</B> 
-<A NAME="tex2html2400"
+<A NAME="tex2html2405"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html2402"
+<A NAME="tex2html2407"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -100,50 +100,60 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html2406"
+<LI><A NAME="tex2html2411"
   HREF="node85.html#SECTION05441000000000000000">Unit Testing: Mocha</A>
 <UL>
-<LI><A NAME="tex2html2407"
+<LI><A NAME="tex2html2412"
   HREF="node85.html#SECTION05441010000000000000">Introducción</A>
-<LI><A NAME="tex2html2408"
+<LI><A NAME="tex2html2413"
   HREF="node85.html#SECTION05441020000000000000">mocha init</A>
-<LI><A NAME="tex2html2409"
+<LI><A NAME="tex2html2414"
   HREF="node85.html#SECTION05441030000000000000">Browser support</A>
-<LI><A NAME="tex2html2410"
+<LI><A NAME="tex2html2415"
   HREF="node85.html#SECTION05441040000000000000">TDD</A>
-<LI><A NAME="tex2html2411"
+<LI><A NAME="tex2html2416"
   HREF="node85.html#SECTION05441050000000000000">Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2412"
+<LI><A NAME="tex2html2417"
   HREF="node85.html#SECTION05442000000000000000">Karma</A>
 <UL>
-<LI><A NAME="tex2html2413"
-  HREF="node85.html#SECTION05442010000000000000">Using Karma with Mocha</A>
-<LI><A NAME="tex2html2414"
-  HREF="node85.html#SECTION05442020000000000000">Load HTML files with Karma</A>
+<LI><A NAME="tex2html2418"
+  HREF="node85.html#SECTION05442010000000000000">Como Funciona</A>
+<LI><A NAME="tex2html2419"
+  HREF="node85.html#SECTION05442020000000000000">Videos</A>
+<LI><A NAME="tex2html2420"
+  HREF="node85.html#SECTION05442030000000000000">Opciones en Línea de Comandos</A>
+<LI><A NAME="tex2html2421"
+  HREF="node85.html#SECTION05442040000000000000">Generando el Fichero de Configuración</A>
+<LI><A NAME="tex2html2422"
+  HREF="node85.html#SECTION05442050000000000000">Arrancando Karma. Starting Karma</A>
+<LI><A NAME="tex2html2423"
+  HREF="node85.html#SECTION05442060000000000000">Using Karma with Mocha</A>
+<LI><A NAME="tex2html2424"
+  HREF="node85.html#SECTION05442070000000000000">Load HTML files with Karma</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2415"
+<LI><A NAME="tex2html2425"
   HREF="node85.html#SECTION05443000000000000000">Grunt</A>
 <UL>
-<LI><A NAME="tex2html2416"
+<LI><A NAME="tex2html2426"
   HREF="node85.html#SECTION05443100000000000000">package.json</A>
-<LI><A NAME="tex2html2417"
+<LI><A NAME="tex2html2427"
   HREF="node85.html#SECTION05443200000000000000">Gruntfile</A>
 <UL>
-<LI><A NAME="tex2html2418"
+<LI><A NAME="tex2html2428"
   HREF="node85.html#SECTION05443210000000000000">An example Gruntfile</A>
-<LI><A NAME="tex2html2419"
+<LI><A NAME="tex2html2429"
   HREF="node85.html#SECTION05443220000000000000">The "wrapper" function</A>
-<LI><A NAME="tex2html2420"
+<LI><A NAME="tex2html2430"
   HREF="node85.html#SECTION05443230000000000000">Project and task configuration</A>
-<LI><A NAME="tex2html2421"
+<LI><A NAME="tex2html2431"
   HREF="node85.html#SECTION05443240000000000000">A simple Grunt.js example</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html2422"
+<LI><A NAME="tex2html2432"
   HREF="node85.html#SECTION05444000000000000000">GitHub Project Pages</A>
 </UL>
 <!--End of Table of Child-Links-->
@@ -376,7 +386,7 @@ TDD</A>
   
 
 <P>
-The <A NAME="10286"></A><SPAN  CLASS="textbf">Mocha TDD interface</SPAN> provides <code>suite()</code>, <code>test()</code>, <code>setup()</code>, and <code>teardown()</code>.
+The <A NAME="10288"></A><SPAN  CLASS="textbf">Mocha TDD interface</SPAN> provides <code>suite()</code>, <code>test()</code>, <code>setup()</code>, and <code>teardown()</code>.
 
 <P>
 <PRE>
@@ -418,10 +428,15 @@ Véase</A>
 Karma
 </H2>
 
+<H4><A NAME="SECTION05442010000000000000">
+Como Funciona</A>
+</H4>
+  
+
 <P>
 
 <UL>
-<LI><A NAME="10472"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
+<LI><A NAME="10483"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
 <A NAME="tex2html348"
   HREF="http://karma-runner.github.io/0.10/intro/installation.html">Karma installation</A>)
 is essentially a tool which spawns a web server that executes source
@@ -458,7 +473,7 @@ the test code again.
 </LI>
 <LI>Each browser then loads the source files inside an
 <code>IFrame</code><A NAME="tex2html347"
-  HREF="footnode.html#foot10471"><SUP><SPAN CLASS="arabic">11</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
+  HREF="footnode.html#foot10478"><SUP><SPAN CLASS="arabic">11</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
 executes the tests and reports the results back to the server.
 </LI>
 <LI>The server collects the results from all of the captured browsers and presents them to the developer.
@@ -466,6 +481,11 @@ executes the tests and reports the results back to the server.
 </UL>
 
 <P>
+
+<H4><A NAME="SECTION05442020000000000000">
+Videos</A>
+</H4>
+  
 
 <UL>
 <LI><A NAME="tex2html349"
@@ -483,6 +503,12 @@ Vojta Jína. YouTube
 </UL>
 
 <P>
+
+<H4><A NAME="SECTION05442030000000000000">
+Opciones en Línea de Comandos</A>
+</H4>
+  
+
 <PRE>
 [~/srcPLgrado/mocha-chai-browser-demo(master)]$ karma --help
 Karma - Spectacular Test Runner for JavaScript.
@@ -504,6 +530,12 @@ Options:
 </PRE>
 
 <P>
+
+<H4><A NAME="SECTION05442040000000000000">
+Generando el Fichero de Configuración</A>
+</H4>
+  
+
 In order to serve us well, Karma needs to know about our project in
 order to test it and this is done via a configuration file. 
 
@@ -634,6 +666,15 @@ module.exports = function(config) {
   });
 };
 </PRE>
+
+<P>
+
+<H4><A NAME="SECTION05442050000000000000">
+Arrancando Karma. Starting Karma</A>
+</H4>
+  
+
+<P>
 When starting Karma, the configuration file path can be passed in as the first argument.
 By default, Karma will look for <code>karma.conf.js</code> in the current directory.
 <PRE>
@@ -677,7 +718,7 @@ Options:
 
 <P>
 
-<H4><A NAME="SECTION05442010000000000000">
+<H4><A NAME="SECTION05442060000000000000">
 Using Karma with Mocha</A>
 </H4>
   
@@ -798,7 +839,7 @@ module.exports = function(config) {
 
 <P>
 
-<H4><A NAME="SECTION05442020000000000000">
+<H4><A NAME="SECTION05442070000000000000">
 Load HTML files with Karma</A>
 </H4>
   
@@ -875,7 +916,7 @@ A typical setup will involve adding two files to your project: <code>package.jso
 to store metadata for projects published as <code>npm</code> modules. 
 
 <P>
-You will list grunt and the Grunt plugins your project needs as <A NAME="10482"></A><SPAN  CLASS="textbf">devDependencies</SPAN> 
+You will list grunt and the Grunt plugins your project needs as <A NAME="10509"></A><SPAN  CLASS="textbf">devDependencies</SPAN> 
 in this file.
 
 <P>
@@ -1274,19 +1315,19 @@ git push origin gh-pages
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2404"
+<A NAME="tex2html2409"
   HREF="node86.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2398"
+<A NAME="tex2html2403"
   HREF="node81.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2394"
+<A NAME="tex2html2399"
   HREF="node84.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html2400"
+<A NAME="tex2html2405"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html2402"
+<A NAME="tex2html2407"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1326,17 +1367,17 @@ git push origin gh-pages
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2405"
+<B> Sig:</B> <A NAME="tex2html2410"
   HREF="node86.html">Functions and all that</A>
-<B>Sup:</B> <A NAME="tex2html2399"
+<B>Sup:</B> <A NAME="tex2html2404"
   HREF="node81.html">Scheem Interpreter</A>
-<B> Ant:</B> <A NAME="tex2html2395"
+<B> Ant:</B> <A NAME="tex2html2400"
   HREF="node84.html">Setting Values</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2015-02-06</I>
+2015-02-09</I>
 </ADDRESS>
 </BODY>
 </HTML>
