--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html938"
+<A NAME="tex2html939"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html932"
+<A NAME="tex2html933"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html926"
+<A NAME="tex2html927"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html934"
+<A NAME="tex2html935"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html936"
+<A NAME="tex2html937"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html939"
+<B> Sig:</B> <A NAME="tex2html940"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html933"
+<B>Sup:</B> <A NAME="tex2html934"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html927"
+<B> Ant:</B> <A NAME="tex2html928"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html934"
+<A NAME="tex2html935"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html936"
+<A NAME="tex2html937"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,49 +103,49 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html940"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html941"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html942"
-  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html943"
-  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html944"
-  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html945"
-  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
+  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
 <LI><A NAME="tex2html946"
-  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
+  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
 <LI><A NAME="tex2html947"
-  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
+  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
 <LI><A NAME="tex2html948"
-  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
+  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
 <LI><A NAME="tex2html949"
-  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html950"
-  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
+  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
 <LI><A NAME="tex2html951"
-  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
+  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html952"
-  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
+  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
 <LI><A NAME="tex2html953"
-  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
 <LI><A NAME="tex2html954"
-  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html955"
-  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
 <LI><A NAME="tex2html956"
-  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
+  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
 <LI><A NAME="tex2html957"
-  HREF="node9.html#SECTION041200180000000000000">Assert API</A>
+  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
 <LI><A NAME="tex2html958"
-  HREF="node9.html#SECTION041200190000000000000">Ejecución Simple</A>
+  HREF="node9.html#SECTION041200180000000000000">Assert API</A>
 <LI><A NAME="tex2html959"
-  HREF="node9.html#SECTION041200200000000000000">Manejando tareas en JS: Gulp</A>
+  HREF="node9.html#SECTION041200190000000000000">Ejecución Simple</A>
 <LI><A NAME="tex2html960"
-  HREF="node9.html#SECTION041200210000000000000">Karma</A>
+  HREF="node9.html#SECTION041200200000000000000">Manejando tareas en JS: Gulp</A>
 <LI><A NAME="tex2html961"
+  HREF="node9.html#SECTION041200210000000000000">Karma</A>
+<LI><A NAME="tex2html962"
   HREF="node9.html#SECTION041200220000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
@@ -1317,7 +1317,7 @@ Manejando tareas en JS: Gulp</A>
 
 
 <P>
-Why would you want to use a <A NAME="3098"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+Why would you want to use a <A NAME="3100"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
 
 <P>
 They’re small applications that automate often time consuming and boring tasks. 
@@ -1566,6 +1566,8 @@ el testing framework Mocha y  Chai en el repositorio
 
 <UL>
 <LI><A NAME="tex2html51"
+  HREF="http://tooling.github.io/book-of-modern-frontend-tooling/build-systems/gulp/introduction.html">The Front-end Tooling Book</A>
+<A NAME="tex2html52"
   HREF="http://www.sitepoint.com/introduction-gulp-js/">An Introduction to Gulp.js by Craig Buckler</A>
 SitePoint
 </LI>
@@ -1574,11 +1576,11 @@ SitePoint
 <LI>Karma
 
 <UL>
-<LI><A NAME="tex2html52"
+<LI><A NAME="tex2html53"
   HREF="https://egghead.io/lessons/unit-testing-introduction-to-karma">Introduction to Karma</A>
 Screencast.
 </LI>
-<LI><A NAME="tex2html53"
+<LI><A NAME="tex2html54"
   HREF="http://youtu.be/MVw8N3hTfCI">Vojta Jina: Testacular (now Karma) - JavaScript test runner</A>. YouTube.
 </LI>
 </UL>
@@ -1588,19 +1590,19 @@ Screencast.
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html938"
+<A NAME="tex2html939"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html932"
+<A NAME="tex2html933"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html926"
+<A NAME="tex2html927"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html934"
+<A NAME="tex2html935"
   HREF="node88.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html936"
+<A NAME="tex2html937"
   HREF="node91.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -1640,11 +1642,11 @@ Screencast.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html939"
+<B> Sig:</B> <A NAME="tex2html940"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html933"
+<B>Sup:</B> <A NAME="tex2html934"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html927"
+<B> Ant:</B> <A NAME="tex2html928"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
