--- a/node85.html
+++ b/node85.html
@@ -588,7 +588,7 @@ Config file generated at "/Users/casiano/local/src/javascript/PLgrado/mocha-tuto
 
 <P>
 The configuration file can be written in CoffeeScript as well. In fact,
-if you execute karma init with a <code>.coffee</code> filename extension, it will
+if you execute <code>karma init</code> with a <code>.coffee</code> filename extension, it will
 generate a CoffeeScript file.
 
 <P>
