--- a/node9.html
+++ b/node9.html
@@ -1109,7 +1109,7 @@ Chai is a platform-agnostic BDD/TDD assertion library featuring several interfac
 (for example, should, expect, and assert). 
 It is open source (MIT licensed), and we can learn more about it at
 <A NAME="tex2html41"
-  HREF="http://chaijs. com/">http://chaijs. com/</A>
+  HREF="http://chaijs.com/">http://chaijs.com/</A>
 <P>
 We can also install Chai on the command line using npm, as follows:
 <PRE>
@@ -1259,8 +1259,7 @@ suite('temperature', function() {
 </PRE>
 
 <P>
-The 
-<FONT COLOR="#0000ff"> "BDD"</FONT> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
+The <A NAME="2360"></A><SPAN  CLASS="textbf">BDD</SPAN> interface provides <code>describe()</code>, <code>it()</code>, <code>before()</code>, <code>after()</code>, <code>beforeEach()</code>, and <code>afterEach()</code>:
 
 <P>
 <PRE>
@@ -1350,7 +1349,7 @@ Manejando tareas en JS: Gulp</A>
 
 
 <P>
-Why would you want to use a <A NAME="2494"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
+Why would you want to use a <A NAME="2492"></A><SPAN  CLASS="textbf">task runner</SPAN>? 
 
 <P>
 They’re small applications that automate often time consuming and boring tasks. 
@@ -1573,7 +1572,7 @@ Karma: Como Funciona</A>
 <P>
 
 <UL>
-<LI><A NAME="3235"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
+<LI><A NAME="3233"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
 <A NAME="tex2html48"
   HREF="http://karma-runner.github.io/0.10/intro/installation.html">Karma installation</A>)
 is essentially a tool which spawns a web server that executes source
@@ -1610,7 +1609,7 @@ the test code again.
 </LI>
 <LI>Each browser then loads the source files inside an
 <code>IFrame</code><A NAME="tex2html47"
-  HREF="footnode.html#foot3228"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
+  HREF="footnode.html#foot3226"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
 executes the tests and reports the results back to the server.
 </LI>
 <LI>The server collects the results from all of the captured browsers and presents them to the developer.
