--- a/node9.html
+++ b/node9.html
@@ -1634,7 +1634,7 @@ Karma: Como Funciona</A>
 <P>
 
 <UL>
-<LI><A NAME="3281"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
+<LI><A NAME="3283"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
 <A NAME="tex2html49"
   HREF="http://karma-runner.github.io/0.10/intro/installation.html">Karma installation</A>)
 is essentially a tool which spawns a web server that executes source
@@ -1671,7 +1671,7 @@ the test code again.
 </LI>
 <LI>Each browser then loads the source files inside an
 <code>IFrame</code><A NAME="tex2html48"
-  HREF="footnode.html#foot3274"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
+  HREF="footnode.html#foot3276"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
 executes the tests and reports the results back to the server.
 </LI>
 <LI>The server collects the results from all of the captured browsers and presents them to the developer.
@@ -2079,7 +2079,13 @@ describe('template', function() {
 </PRE>
 
 <P>
-
+Preprocessors in Karma allow you to do some work with your files before they get served to the browser. The configuration of these happens in this block in the config file.
+<PRE>
+preprocessors = {
+  '**/*.coffee': 'coffee',
+  '**/*.html': 'html2js'
+};
+</PRE>
 <H4><A NAME="SECTION041200300000000000000">
 tests/tests.js usando Karma y Considerando el HTML</A>
 </H4>
