--- a/node9.html
+++ b/node9.html
@@ -2190,7 +2190,8 @@ Karma y Gulp</A>
 
 <P>
 Para automatizar la ejecución de las pruebas con <code>karma</code> y <code>gulp</code>
-añadimos un par de tareas a nuestor <code>gulpfile</code>:
+añadimos un par de tareas a nuestor <code>gulpfile</code>. Las tareas <code>test</code> y
+<code>default</code>:
 
 <P>
 <PRE>
@@ -2200,24 +2201,7 @@ var gulp    = require('gulp'),
     uglify  = require('gulp-uglify'),
     concat  = require('gulp-concat');
 var karma   = require('gulp-karma');
-var del     = require('del');
-var minifyHTML = require('gulp-minify-html');
-var minifyCSS  = require('gulp-minify-css');
-
-gulp.task('minify', function () {
-  gulp.src('temperature.js')
-  .pipe(uglify())
-  .pipe(gulp.dest('minified'));
-
-  gulp.src('./index.html')
-    .pipe(minifyHTML())
-    .pipe(gulp.dest('./minified/'))
-
-  gulp.src('./*.css')
-   .pipe(minifyCSS({keepBreaks:true}))
-   .pipe(gulp.dest('./minified/'))
-});
-
+...
 
 gulp.task('test', function() {
   // Be sure to return the stream
@@ -2238,13 +2222,6 @@ gulp.task('default', function() {
       configFile: 'karma.conf.js',
       action: 'watch'
     }));
-});
-
-// Not all tasks need to use streams
-// A gulpfile is just another node program and you can use all packages available on npm
-gulp.task('clean', function(cb) {
-  // You can use multiple globbing patterns as you would with `gulp.src`
-  del(['minified/*'], cb);
 });
 </PRE>
 
