--- a/node9.html
+++ b/node9.html
@@ -2038,7 +2038,7 @@ module.exports = function(config) {
   });
 };
 </PRE>
-Another example can be found ar
+Another example can be found at
 (<A NAME="tex2html54"
   HREF="https://github.com/crguezl/nathanuniversityexercisesPL/blob/master/scheem8/karma.conf.js">https://github.com/crguezl/nathanuniversityexercisesPL/blob/master/scheem8/karma.conf.js</A>).
 
