--- a/node9.html
+++ b/node9.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html955"
+<A NAME="tex2html956"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html949"
+<A NAME="tex2html950"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html943"
+<A NAME="tex2html944"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html951"
+<A NAME="tex2html952"
   HREF="node89.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html953"
+<A NAME="tex2html954"
   HREF="node92.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html956"
+<B> Sig:</B> <A NAME="tex2html957"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html950"
+<B>Sup:</B> <A NAME="tex2html951"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html944"
+<B> Ant:</B> <A NAME="tex2html945"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 <B> Con:</B> 
-<A NAME="tex2html951"
+<A NAME="tex2html952"
   HREF="node89.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html953"
+<A NAME="tex2html954"
   HREF="node92.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,73 +103,73 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html957"
-  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html958"
-  HREF="node9.html#SECTION04120020000000000000">global.css</A>
+  HREF="node9.html#SECTION04120010000000000000">index.html</A>
 <LI><A NAME="tex2html959"
-  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
+  HREF="node9.html#SECTION04120020000000000000">global.css</A>
 <LI><A NAME="tex2html960"
-  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
+  HREF="node9.html#SECTION04120030000000000000">Sintáxis CSS</A>
 <LI><A NAME="tex2html961"
-  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
+  HREF="node9.html#SECTION04120040000000000000">Selectores en CSS</A>
 <LI><A NAME="tex2html962"
-  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
+  HREF="node9.html#SECTION04120050000000000000">CSS reset</A>
 <LI><A NAME="tex2html963"
-  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
+  HREF="node9.html#SECTION04120060000000000000">El Modelo de Caja</A>
 <LI><A NAME="tex2html964"
-  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
+  HREF="node9.html#SECTION04120070000000000000">Editing CSS styles in Chrome using various DevTools aid</A>
 <LI><A NAME="tex2html965"
-  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
+  HREF="node9.html#SECTION04120080000000000000">Block versus Inline</A>
 <LI><A NAME="tex2html966"
-  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
+  HREF="node9.html#SECTION04120090000000000000">Propiedades CSS</A>
 <LI><A NAME="tex2html967"
-  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
+  HREF="node9.html#SECTION041200100000000000000">temperature.js</A>
 <LI><A NAME="tex2html968"
-  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
+  HREF="node9.html#SECTION041200110000000000000">Despliegue</A>
 <LI><A NAME="tex2html969"
-  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
+  HREF="node9.html#SECTION041200120000000000000">Creando un fichero package.json</A>
 <LI><A NAME="tex2html970"
-  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
+  HREF="node9.html#SECTION041200130000000000000">Pruebas: Mocha y Chai</A>
 <LI><A NAME="tex2html971"
-  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
+  HREF="node9.html#SECTION041200140000000000000">Pruebas: Estructura</A>
 <LI><A NAME="tex2html972"
-  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
+  HREF="node9.html#SECTION041200150000000000000">Pruebas: <TT>index.html</TT></A>
 <LI><A NAME="tex2html973"
-  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
+  HREF="node9.html#SECTION041200160000000000000">Pruebas: Añadir los tests</A>
 <LI><A NAME="tex2html974"
-  HREF="node9.html#SECTION041200180000000000000">Assert API, Expect/Should API</A>
+  HREF="node9.html#SECTION041200170000000000000">Chai Assert Style</A>
 <LI><A NAME="tex2html975"
-  HREF="node9.html#SECTION041200190000000000000">Chai Expect Style</A>
+  HREF="node9.html#SECTION041200180000000000000">Assert API, Expect/Should API</A>
 <LI><A NAME="tex2html976"
-  HREF="node9.html#SECTION041200200000000000000">Ejecución Simple</A>
+  HREF="node9.html#SECTION041200190000000000000">Chai Expect Style</A>
 <LI><A NAME="tex2html977"
-  HREF="node9.html#SECTION041200210000000000000">Manejando tareas en JS: Gulp</A>
+  HREF="node9.html#SECTION041200200000000000000">Ejecución Simple</A>
 <LI><A NAME="tex2html978"
-  HREF="node9.html#SECTION041200220000000000000">Karma</A>
+  HREF="node9.html#SECTION041200210000000000000">Manejando tareas en JS: Gulp</A>
 <LI><A NAME="tex2html979"
-  HREF="node9.html#SECTION041200230000000000000">Karma: Como Funciona</A>
+  HREF="node9.html#SECTION041200220000000000000">Karma</A>
 <LI><A NAME="tex2html980"
-  HREF="node9.html#SECTION041200240000000000000">Karma: Videos</A>
+  HREF="node9.html#SECTION041200230000000000000">Karma: Como Funciona</A>
 <LI><A NAME="tex2html981"
-  HREF="node9.html#SECTION041200250000000000000">Karma: Opciones en Línea de Comandos</A>
+  HREF="node9.html#SECTION041200240000000000000">Karma: Videos</A>
 <LI><A NAME="tex2html982"
-  HREF="node9.html#SECTION041200260000000000000">Karma: Generando el Fichero de Configuración</A>
+  HREF="node9.html#SECTION041200250000000000000">Karma: Opciones en Línea de Comandos</A>
 <LI><A NAME="tex2html983"
-  HREF="node9.html#SECTION041200270000000000000">Arrancando Karma. Starting Karma</A>
+  HREF="node9.html#SECTION041200260000000000000">Karma: Generando el Fichero de Configuración</A>
 <LI><A NAME="tex2html984"
-  HREF="node9.html#SECTION041200280000000000000">Using Karma with Mocha</A>
+  HREF="node9.html#SECTION041200270000000000000">Arrancando Karma. Starting Karma</A>
 <LI><A NAME="tex2html985"
-  HREF="node9.html#SECTION041200290000000000000">Load HTML files with Karma</A>
+  HREF="node9.html#SECTION041200280000000000000">Using Karma with Mocha</A>
 <LI><A NAME="tex2html986"
-  HREF="node9.html#SECTION041200300000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
+  HREF="node9.html#SECTION041200290000000000000">Load HTML files with Karma</A>
 <LI><A NAME="tex2html987"
-  HREF="node9.html#SECTION041200310000000000000">tests/test.html usando Karma y Considerando el HTML</A>
+  HREF="node9.html#SECTION041200300000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
 <LI><A NAME="tex2html988"
-  HREF="node9.html#SECTION041200320000000000000">Karma y HTML: Véase</A>
+  HREF="node9.html#SECTION041200310000000000000">tests/test.html usando Karma y Considerando el HTML</A>
 <LI><A NAME="tex2html989"
-  HREF="node9.html#SECTION041200330000000000000">Karma y Gulp</A>
+  HREF="node9.html#SECTION041200320000000000000">Karma y HTML: Véase</A>
 <LI><A NAME="tex2html990"
+  HREF="node9.html#SECTION041200330000000000000">Karma y Gulp</A>
+<LI><A NAME="tex2html991"
   HREF="node9.html#SECTION041200340000000000000">Pruebas: Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
@@ -1636,7 +1636,7 @@ Karma: Como Funciona</A>
 <P>
 
 <UL>
-<LI><A NAME="3284"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
+<LI><A NAME="3286"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
 <A NAME="tex2html49"
   HREF="http://karma-runner.github.io/0.10/intro/installation.html">Karma installation</A>)
 is essentially a tool which spawns a web server that executes source
@@ -1673,7 +1673,7 @@ the test code again.
 </LI>
 <LI>Each browser then loads the source files inside an
 <code>IFrame</code><A NAME="tex2html48"
-  HREF="footnode.html#foot3277"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
+  HREF="footnode.html#foot3279"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
 executes the tests and reports the results back to the server.
 </LI>
 <LI>The server collects the results from all of the captured browsers and presents them to the developer.
@@ -2291,24 +2291,28 @@ Screencast.
 </LI>
 </UL>
 </LI>
+<LI><A NAME="tex2html69"
+  HREF="http://phantomjs.org/">PhantomJS</A>
+is a headless WebKit scriptable with a JavaScript API. It has fast and native support for various web standards: DOM handling, CSS selector, JSON, Canvas, and SVG.
+</LI>
 </UL>
 
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html955"
+<A NAME="tex2html956"
   HREF="node10.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html949"
+<A NAME="tex2html950"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html943"
+<A NAME="tex2html944"
   HREF="node8.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html951"
+<A NAME="tex2html952"
   HREF="node89.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html953"
+<A NAME="tex2html954"
   HREF="node92.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -2348,11 +2352,11 @@ Screencast.
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html956"
+<B> Sig:</B> <A NAME="tex2html957"
   HREF="node10.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html950"
+<B>Sup:</B> <A NAME="tex2html951"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html944"
+<B> Ant:</B> <A NAME="tex2html945"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
 </DIV>
 <!--End of Navigation Panel-->
