--- a/node7.html
+++ b/node7.html
@@ -172,119 +172,121 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html879"
   HREF="node9.html#SECTION041200280000000000000">Using Karma with Mocha</A>
 <LI><A NAME="tex2html880"
-  HREF="node9.html#SECTION041200290000000000000">Load HTML files with Karma</A>
+  HREF="node9.html#SECTION041200290000000000000">Algunas dependencias para ejecutar Karma</A>
 <LI><A NAME="tex2html881"
-  HREF="node9.html#SECTION041200300000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
+  HREF="node9.html#SECTION041200300000000000000">Load HTML files with Karma</A>
 <LI><A NAME="tex2html882"
-  HREF="node9.html#SECTION041200310000000000000">tests/test.html usando Karma y Considerando el HTML</A>
+  HREF="node9.html#SECTION041200310000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
 <LI><A NAME="tex2html883"
-  HREF="node9.html#SECTION041200320000000000000">Karma y HTML: Véase</A>
+  HREF="node9.html#SECTION041200320000000000000">tests/test.html usando Karma y Considerando el HTML</A>
 <LI><A NAME="tex2html884"
-  HREF="node9.html#SECTION041200330000000000000">Karma y Gulp</A>
+  HREF="node9.html#SECTION041200330000000000000">Karma y HTML: Véase</A>
 <LI><A NAME="tex2html885"
-  HREF="node9.html#SECTION041200340000000000000">Pruebas: Véase</A>
+  HREF="node9.html#SECTION041200340000000000000">Karma y Gulp</A>
+<LI><A NAME="tex2html886"
+  HREF="node9.html#SECTION041200350000000000000">Pruebas: Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html886"
+<LI><A NAME="tex2html887"
   HREF="node10.html">Práctica: Comma Separated Values. CSV</A>
 <UL>
-<LI><A NAME="tex2html887"
-  HREF="node10.html#SECTION04130010000000000000">Donde</A>
 <LI><A NAME="tex2html888"
-  HREF="node10.html#SECTION04130020000000000000">Introducción al formato CSV</A>
+  HREF="node10.html#SECTION04130010000000000000">Donde</A>
 <LI><A NAME="tex2html889"
-  HREF="node10.html#SECTION04130030000000000000">Ejemplo de ejecución</A>
+  HREF="node10.html#SECTION04130020000000000000">Introducción al formato CSV</A>
 <LI><A NAME="tex2html890"
-  HREF="node10.html#SECTION04130040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
+  HREF="node10.html#SECTION04130030000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html891"
-  HREF="node10.html#SECTION04130050000000000000">index.html</A>
+  HREF="node10.html#SECTION04130040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
 <LI><A NAME="tex2html892"
-  HREF="node10.html#SECTION04130060000000000000">jQuery</A>
+  HREF="node10.html#SECTION04130050000000000000">index.html</A>
 <LI><A NAME="tex2html893"
-  HREF="node10.html#SECTION04130070000000000000">How JQuery Works</A>
+  HREF="node10.html#SECTION04130060000000000000">jQuery</A>
 <LI><A NAME="tex2html894"
-  HREF="node10.html#SECTION04130080000000000000">JSON.stringify()</A>
+  HREF="node10.html#SECTION04130070000000000000">How JQuery Works</A>
 <LI><A NAME="tex2html895"
-  HREF="node10.html#SECTION04130090000000000000">Underscore</A>
+  HREF="node10.html#SECTION04130080000000000000">JSON.stringify()</A>
 <LI><A NAME="tex2html896"
-  HREF="node10.html#SECTION041300100000000000000">Templates en Underscore</A>
+  HREF="node10.html#SECTION04130090000000000000">Underscore</A>
 <LI><A NAME="tex2html897"
-  HREF="node10.html#SECTION041300110000000000000">Content delivery network or content distribution network (CDN)</A>
+  HREF="node10.html#SECTION041300100000000000000">Templates en Underscore</A>
 <LI><A NAME="tex2html898"
-  HREF="node10.html#SECTION041300120000000000000">textarea, autofocus y button</A>
+  HREF="node10.html#SECTION041300110000000000000">Content delivery network or content distribution network (CDN)</A>
 <LI><A NAME="tex2html899"
-  HREF="node10.html#SECTION041300130000000000000">Local Storage (HTML5 Web Storage)</A>
+  HREF="node10.html#SECTION041300120000000000000">textarea, autofocus y button</A>
 <LI><A NAME="tex2html900"
-  HREF="node10.html#SECTION041300140000000000000">global.css</A>
+  HREF="node10.html#SECTION041300130000000000000">Local Storage (HTML5 Web Storage)</A>
 <LI><A NAME="tex2html901"
-  HREF="node10.html#SECTION041300150000000000000">csv.js</A>
+  HREF="node10.html#SECTION041300140000000000000">global.css</A>
 <LI><A NAME="tex2html902"
+  HREF="node10.html#SECTION041300150000000000000">csv.js</A>
+<LI><A NAME="tex2html903"
   HREF="node10.html#SECTION041300160000000000000">Tareas</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html903"
+<LI><A NAME="tex2html904"
   HREF="node11.html">Comentarios y Consejos</A>
 <UL>
-<LI><A NAME="tex2html904"
-  HREF="node11.html#SECTION04140010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
 <LI><A NAME="tex2html905"
+  HREF="node11.html#SECTION04140010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
+<LI><A NAME="tex2html906"
   HREF="node11.html#SECTION04140020000000000000">favicons y shortcut icons</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html906"
-  HREF="node12.html">Ejercicios</A>
 <LI><A NAME="tex2html907"
+  HREF="node12.html">Ejercicios</A>
+<LI><A NAME="tex2html908"
   HREF="node13.html">Práctica: Palabras Repetidas</A>
 <UL>
-<LI><A NAME="tex2html908"
-  HREF="node13.html#SECTION04160010000000000000">Donde</A>
 <LI><A NAME="tex2html909"
-  HREF="node13.html#SECTION04160020000000000000">Ejemplo de ejecución</A>
+  HREF="node13.html#SECTION04160010000000000000">Donde</A>
 <LI><A NAME="tex2html910"
-  HREF="node13.html#SECTION04160030000000000000">Estructura</A>
+  HREF="node13.html#SECTION04160020000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html911"
-  HREF="node13.html#SECTION04160040000000000000">index.html</A>
+  HREF="node13.html#SECTION04160030000000000000">Estructura</A>
 <LI><A NAME="tex2html912"
-  HREF="node13.html#SECTION04160050000000000000">global.css</A>
+  HREF="node13.html#SECTION04160040000000000000">index.html</A>
 <LI><A NAME="tex2html913"
-  HREF="node13.html#SECTION04160060000000000000">repeated_words.js</A>
+  HREF="node13.html#SECTION04160050000000000000">global.css</A>
 <LI><A NAME="tex2html914"
+  HREF="node13.html#SECTION04160060000000000000">repeated_words.js</A>
+<LI><A NAME="tex2html915"
   HREF="node13.html#SECTION04160070000000000000">Ficheros de Entrada</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html915"
-  HREF="node14.html">Ejercicios</A>
 <LI><A NAME="tex2html916"
-  HREF="node15.html">Ejercicios</A>
+  HREF="node14.html">Ejercicios</A>
 <LI><A NAME="tex2html917"
+  HREF="node15.html">Ejercicios</A>
+<LI><A NAME="tex2html918"
   HREF="node16.html">Práctica: Ficheros INI</A>
 <UL>
-<LI><A NAME="tex2html918"
-  HREF="node16.html#SECTION04190010000000000000">Donde</A>
 <LI><A NAME="tex2html919"
-  HREF="node16.html#SECTION04190020000000000000">index.html</A>
+  HREF="node16.html#SECTION04190010000000000000">Donde</A>
 <LI><A NAME="tex2html920"
-  HREF="node16.html#SECTION04190030000000000000">Ficheros</A>
+  HREF="node16.html#SECTION04190020000000000000">index.html</A>
 <LI><A NAME="tex2html921"
-  HREF="node16.html#SECTION04190040000000000000">global.css</A>
+  HREF="node16.html#SECTION04190030000000000000">Ficheros</A>
 <LI><A NAME="tex2html922"
-  HREF="node16.html#SECTION04190050000000000000">Ficheros de Prueba</A>
+  HREF="node16.html#SECTION04190040000000000000">global.css</A>
 <LI><A NAME="tex2html923"
-  HREF="node16.html#SECTION04190060000000000000">ini.js</A>
+  HREF="node16.html#SECTION04190050000000000000">Ficheros de Prueba</A>
 <LI><A NAME="tex2html924"
-  HREF="node16.html#SECTION04190070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node16.html#SECTION04190060000000000000">ini.js</A>
 <LI><A NAME="tex2html925"
-  HREF="node16.html#SECTION04190080000000000000">Tareas</A>
+  HREF="node16.html#SECTION04190070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
 <LI><A NAME="tex2html926"
+  HREF="node16.html#SECTION04190080000000000000">Tareas</A>
+<LI><A NAME="tex2html927"
   HREF="node16.html#SECTION04190090000000000000">Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html927"
+<LI><A NAME="tex2html928"
   HREF="node17.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 <UL>
-<LI><A NAME="tex2html928"
-  HREF="node17.html#SECTION041100010000000000000">TDOP, Top Down Operator Precedence</A>
 <LI><A NAME="tex2html929"
+  HREF="node17.html#SECTION041100010000000000000">TDOP, Top Down Operator Precedence</A>
+<LI><A NAME="tex2html930"
   HREF="node17.html#SECTION041100020000000000000">Objetivos de la Práctica</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
