--- a/node9.html
+++ b/node9.html
@@ -2052,7 +2052,7 @@ Algunas dependencias para ejecutar Karma</A>
   
 
 De hecho, para poder usar Karma con los diferentes navegadores es necesario
-instalar unos cuantos módulos. Vea este fragmaento de <code>package.json</code>
+instalar unos cuantos módulos. Vea este fragmento de <code>package.json</code>
 <PRE>
  "devDependencies": {
     "chai": "*",
