--- a/node10.html
+++ b/node10.html
@@ -151,6 +151,8 @@ Requisitos:
 </LI>
 <LI>Añada integración contínua usando Travis (travis-ci.org)
 </LI>
+<LI>Añada el badge de Travis en el <code>README.md</code>
+</LI>
 <LI>Añada tareas en el `Gulpfile` para la ejecución de las pruebas mediante Karma.
 </LI>
 <LI>Añada (si no lo hizo en la práctica anterior) cubrimiento con blanket.
