--- a/node7.html
+++ b/node7.html
@@ -165,133 +165,135 @@ Expresiones Regulares y Análisis Léxico en JavaScript
   HREF="node10.html">Práctica: Conversor de Temperaturas con Karma y Travis</A>
 <UL>
 <LI><A NAME="tex2html882"
-  HREF="node10.html#SECTION04130010000000000000">Karma</A>
+  HREF="node10.html#SECTION04130010000000000000">Requisitos</A>
 <LI><A NAME="tex2html883"
-  HREF="node10.html#SECTION04130020000000000000">Karma: Como Funciona</A>
+  HREF="node10.html#SECTION04130020000000000000">Karma</A>
 <LI><A NAME="tex2html884"
-  HREF="node10.html#SECTION04130030000000000000">Karma: Videos</A>
+  HREF="node10.html#SECTION04130030000000000000">Karma: Como Funciona</A>
 <LI><A NAME="tex2html885"
-  HREF="node10.html#SECTION04130040000000000000">Karma: Opciones en Línea de Comandos</A>
+  HREF="node10.html#SECTION04130040000000000000">Karma: Videos</A>
 <LI><A NAME="tex2html886"
-  HREF="node10.html#SECTION04130050000000000000">Karma: Generando el Fichero de Configuración</A>
+  HREF="node10.html#SECTION04130050000000000000">Karma: Opciones en Línea de Comandos</A>
 <LI><A NAME="tex2html887"
-  HREF="node10.html#SECTION04130060000000000000">Arrancando Karma. Starting Karma</A>
+  HREF="node10.html#SECTION04130060000000000000">Karma: Generando el Fichero de Configuración</A>
 <LI><A NAME="tex2html888"
-  HREF="node10.html#SECTION04130070000000000000">Using Karma with Mocha</A>
+  HREF="node10.html#SECTION04130070000000000000">Arrancando Karma. Starting Karma</A>
 <LI><A NAME="tex2html889"
-  HREF="node10.html#SECTION04130080000000000000">Algunas dependencias para ejecutar Karma</A>
+  HREF="node10.html#SECTION04130080000000000000">Using Karma with Mocha</A>
 <LI><A NAME="tex2html890"
-  HREF="node10.html#SECTION04130090000000000000">Load HTML files with Karma</A>
+  HREF="node10.html#SECTION04130090000000000000">Algunas dependencias para ejecutar Karma</A>
 <LI><A NAME="tex2html891"
-  HREF="node10.html#SECTION041300100000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
+  HREF="node10.html#SECTION041300100000000000000">Load HTML files with Karma</A>
 <LI><A NAME="tex2html892"
-  HREF="node10.html#SECTION041300110000000000000">tests/test.html usando Karma y Considerando el HTML</A>
+  HREF="node10.html#SECTION041300110000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
 <LI><A NAME="tex2html893"
-  HREF="node10.html#SECTION041300120000000000000">Karma y HTML: Véase</A>
+  HREF="node10.html#SECTION041300120000000000000">tests/test.html usando Karma y Considerando el HTML</A>
 <LI><A NAME="tex2html894"
-  HREF="node10.html#SECTION041300130000000000000">Karma y Gulp</A>
+  HREF="node10.html#SECTION041300130000000000000">Karma y HTML: Véase</A>
+<LI><A NAME="tex2html895"
+  HREF="node10.html#SECTION041300140000000000000">Karma y Gulp</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html895"
+<LI><A NAME="tex2html896"
   HREF="node11.html">Práctica: Comma Separated Values. CSV</A>
 <UL>
-<LI><A NAME="tex2html896"
-  HREF="node11.html#SECTION04140010000000000000">Donde</A>
 <LI><A NAME="tex2html897"
-  HREF="node11.html#SECTION04140020000000000000">Introducción al formato CSV</A>
+  HREF="node11.html#SECTION04140010000000000000">Donde</A>
 <LI><A NAME="tex2html898"
-  HREF="node11.html#SECTION04140030000000000000">Ejemplo de ejecución</A>
+  HREF="node11.html#SECTION04140020000000000000">Introducción al formato CSV</A>
 <LI><A NAME="tex2html899"
-  HREF="node11.html#SECTION04140040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
+  HREF="node11.html#SECTION04140030000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html900"
-  HREF="node11.html#SECTION04140050000000000000">index.html</A>
+  HREF="node11.html#SECTION04140040000000000000">Aproximación al análisis mediante expresiones regulares de CSV</A>
 <LI><A NAME="tex2html901"
-  HREF="node11.html#SECTION04140060000000000000">jQuery</A>
+  HREF="node11.html#SECTION04140050000000000000">index.html</A>
 <LI><A NAME="tex2html902"
-  HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
+  HREF="node11.html#SECTION04140060000000000000">jQuery</A>
 <LI><A NAME="tex2html903"
-  HREF="node11.html#SECTION04140080000000000000">JSON.stringify()</A>
+  HREF="node11.html#SECTION04140070000000000000">How JQuery Works</A>
 <LI><A NAME="tex2html904"
-  HREF="node11.html#SECTION04140090000000000000">Underscore</A>
+  HREF="node11.html#SECTION04140080000000000000">JSON.stringify()</A>
 <LI><A NAME="tex2html905"
-  HREF="node11.html#SECTION041400100000000000000">Templates en Underscore</A>
+  HREF="node11.html#SECTION04140090000000000000">Underscore</A>
 <LI><A NAME="tex2html906"
-  HREF="node11.html#SECTION041400110000000000000">Content delivery network or content distribution network (CDN)</A>
+  HREF="node11.html#SECTION041400100000000000000">Templates en Underscore</A>
 <LI><A NAME="tex2html907"
-  HREF="node11.html#SECTION041400120000000000000">textarea, autofocus y button</A>
+  HREF="node11.html#SECTION041400110000000000000">Content delivery network or content distribution network (CDN)</A>
 <LI><A NAME="tex2html908"
-  HREF="node11.html#SECTION041400130000000000000">Local Storage (HTML5 Web Storage)</A>
+  HREF="node11.html#SECTION041400120000000000000">textarea, autofocus y button</A>
 <LI><A NAME="tex2html909"
-  HREF="node11.html#SECTION041400140000000000000">global.css</A>
+  HREF="node11.html#SECTION041400130000000000000">Local Storage (HTML5 Web Storage)</A>
 <LI><A NAME="tex2html910"
-  HREF="node11.html#SECTION041400150000000000000">csv.js</A>
+  HREF="node11.html#SECTION041400140000000000000">global.css</A>
 <LI><A NAME="tex2html911"
+  HREF="node11.html#SECTION041400150000000000000">csv.js</A>
+<LI><A NAME="tex2html912"
   HREF="node11.html#SECTION041400160000000000000">Tareas</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html912"
+<LI><A NAME="tex2html913"
   HREF="node12.html">Comentarios y Consejos</A>
 <UL>
-<LI><A NAME="tex2html913"
-  HREF="node12.html#SECTION04150010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
 <LI><A NAME="tex2html914"
+  HREF="node12.html#SECTION04150010000000000000">How can I push a local Git branch to a remote with a different name easily?</A>
+<LI><A NAME="tex2html915"
   HREF="node12.html#SECTION04150020000000000000">favicons y shortcut icons</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html915"
-  HREF="node13.html">Ejercicios</A>
 <LI><A NAME="tex2html916"
+  HREF="node13.html">Ejercicios</A>
+<LI><A NAME="tex2html917"
   HREF="node14.html">Práctica: Palabras Repetidas</A>
 <UL>
-<LI><A NAME="tex2html917"
-  HREF="node14.html#SECTION04170010000000000000">Donde</A>
 <LI><A NAME="tex2html918"
-  HREF="node14.html#SECTION04170020000000000000">Ejemplo de ejecución</A>
+  HREF="node14.html#SECTION04170010000000000000">Donde</A>
 <LI><A NAME="tex2html919"
-  HREF="node14.html#SECTION04170030000000000000">Estructura</A>
+  HREF="node14.html#SECTION04170020000000000000">Ejemplo de ejecución</A>
 <LI><A NAME="tex2html920"
-  HREF="node14.html#SECTION04170040000000000000">index.html</A>
+  HREF="node14.html#SECTION04170030000000000000">Estructura</A>
 <LI><A NAME="tex2html921"
-  HREF="node14.html#SECTION04170050000000000000">global.css</A>
+  HREF="node14.html#SECTION04170040000000000000">index.html</A>
 <LI><A NAME="tex2html922"
-  HREF="node14.html#SECTION04170060000000000000">repeated_words.js</A>
+  HREF="node14.html#SECTION04170050000000000000">global.css</A>
 <LI><A NAME="tex2html923"
+  HREF="node14.html#SECTION04170060000000000000">repeated_words.js</A>
+<LI><A NAME="tex2html924"
   HREF="node14.html#SECTION04170070000000000000">Ficheros de Entrada</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html924"
-  HREF="node15.html">Ejercicios</A>
 <LI><A NAME="tex2html925"
-  HREF="node16.html">Ejercicios</A>
+  HREF="node15.html">Ejercicios</A>
 <LI><A NAME="tex2html926"
+  HREF="node16.html">Ejercicios</A>
+<LI><A NAME="tex2html927"
   HREF="node17.html">Práctica: Ficheros INI</A>
 <UL>
-<LI><A NAME="tex2html927"
-  HREF="node17.html#SECTION041100010000000000000">Donde</A>
 <LI><A NAME="tex2html928"
-  HREF="node17.html#SECTION041100020000000000000">index.html</A>
+  HREF="node17.html#SECTION041100010000000000000">Donde</A>
 <LI><A NAME="tex2html929"
-  HREF="node17.html#SECTION041100030000000000000">Ficheros</A>
+  HREF="node17.html#SECTION041100020000000000000">index.html</A>
 <LI><A NAME="tex2html930"
-  HREF="node17.html#SECTION041100040000000000000">global.css</A>
+  HREF="node17.html#SECTION041100030000000000000">Ficheros</A>
 <LI><A NAME="tex2html931"
-  HREF="node17.html#SECTION041100050000000000000">Ficheros de Prueba</A>
+  HREF="node17.html#SECTION041100040000000000000">global.css</A>
 <LI><A NAME="tex2html932"
-  HREF="node17.html#SECTION041100060000000000000">ini.js</A>
+  HREF="node17.html#SECTION041100050000000000000">Ficheros de Prueba</A>
 <LI><A NAME="tex2html933"
-  HREF="node17.html#SECTION041100070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node17.html#SECTION041100060000000000000">ini.js</A>
 <LI><A NAME="tex2html934"
-  HREF="node17.html#SECTION041100080000000000000">Tareas</A>
+  HREF="node17.html#SECTION041100070000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
 <LI><A NAME="tex2html935"
+  HREF="node17.html#SECTION041100080000000000000">Tareas</A>
+<LI><A NAME="tex2html936"
   HREF="node17.html#SECTION041100090000000000000">Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html936"
+<LI><A NAME="tex2html937"
   HREF="node18.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 <UL>
-<LI><A NAME="tex2html937"
-  HREF="node18.html#SECTION041110010000000000000">TDOP, Top Down Operator Precedence</A>
 <LI><A NAME="tex2html938"
+  HREF="node18.html#SECTION041110010000000000000">TDOP, Top Down Operator Precedence</A>
+<LI><A NAME="tex2html939"
   HREF="node18.html#SECTION041110020000000000000">Objetivos de la Práctica</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
