--- a/node10.html
+++ b/node10.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1001"
+<A NAME="tex2html1002"
   HREF="node11.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html995"
+<A NAME="tex2html996"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html989"
+<A NAME="tex2html990"
   HREF="node9.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html997"
+<A NAME="tex2html998"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html999"
+<A NAME="tex2html1000"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1002"
+<B> Sig:</B> <A NAME="tex2html1003"
   HREF="node11.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html996"
+<B>Sup:</B> <A NAME="tex2html997"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html990"
+<B> Ant:</B> <A NAME="tex2html991"
   HREF="node9.html">Práctica: Conversor de Temperaturas</A>
 <B> Con:</B> 
-<A NAME="tex2html997"
+<A NAME="tex2html998"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html999"
+<A NAME="tex2html1000"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,38 +103,40 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1003"
-  HREF="node10.html#SECTION04130010000000000000">Karma</A>
 <LI><A NAME="tex2html1004"
-  HREF="node10.html#SECTION04130020000000000000">Karma: Como Funciona</A>
+  HREF="node10.html#SECTION04130010000000000000">Requisitos</A>
 <LI><A NAME="tex2html1005"
-  HREF="node10.html#SECTION04130030000000000000">Karma: Videos</A>
+  HREF="node10.html#SECTION04130020000000000000">Karma</A>
 <LI><A NAME="tex2html1006"
-  HREF="node10.html#SECTION04130040000000000000">Karma: Opciones en Línea de Comandos</A>
+  HREF="node10.html#SECTION04130030000000000000">Karma: Como Funciona</A>
 <LI><A NAME="tex2html1007"
-  HREF="node10.html#SECTION04130050000000000000">Karma: Generando el Fichero de Configuración</A>
+  HREF="node10.html#SECTION04130040000000000000">Karma: Videos</A>
 <LI><A NAME="tex2html1008"
-  HREF="node10.html#SECTION04130060000000000000">Arrancando Karma. Starting Karma</A>
+  HREF="node10.html#SECTION04130050000000000000">Karma: Opciones en Línea de Comandos</A>
 <LI><A NAME="tex2html1009"
-  HREF="node10.html#SECTION04130070000000000000">Using Karma with Mocha</A>
+  HREF="node10.html#SECTION04130060000000000000">Karma: Generando el Fichero de Configuración</A>
 <LI><A NAME="tex2html1010"
-  HREF="node10.html#SECTION04130080000000000000">Algunas dependencias para ejecutar Karma</A>
+  HREF="node10.html#SECTION04130070000000000000">Arrancando Karma. Starting Karma</A>
 <LI><A NAME="tex2html1011"
-  HREF="node10.html#SECTION04130090000000000000">Load HTML files with Karma</A>
+  HREF="node10.html#SECTION04130080000000000000">Using Karma with Mocha</A>
 <LI><A NAME="tex2html1012"
-  HREF="node10.html#SECTION041300100000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
+  HREF="node10.html#SECTION04130090000000000000">Algunas dependencias para ejecutar Karma</A>
 <LI><A NAME="tex2html1013"
-  HREF="node10.html#SECTION041300110000000000000">tests/test.html usando Karma y Considerando el HTML</A>
+  HREF="node10.html#SECTION041300100000000000000">Load HTML files with Karma</A>
 <LI><A NAME="tex2html1014"
-  HREF="node10.html#SECTION041300120000000000000">Karma y HTML: Véase</A>
+  HREF="node10.html#SECTION041300110000000000000">tests/tests.js usando Karma y Considerando el HTML</A>
 <LI><A NAME="tex2html1015"
-  HREF="node10.html#SECTION041300130000000000000">Karma y Gulp</A>
+  HREF="node10.html#SECTION041300120000000000000">tests/test.html usando Karma y Considerando el HTML</A>
+<LI><A NAME="tex2html1016"
+  HREF="node10.html#SECTION041300130000000000000">Karma y HTML: Véase</A>
+<LI><A NAME="tex2html1017"
+  HREF="node10.html#SECTION041300140000000000000">Karma y Gulp</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION04130000000000000000"></A>
-   <A NAME="2583"></A>
+   <A NAME="2584"></A>
   
 <A NAME="sectionpractica:conversordetemperaturasconkarmaytravis"></A>
 <BR>
@@ -142,7 +144,11 @@ Práctica: Conversor de Temperaturas con Karma y Travis
 </H1>
 
 <P>
-Requisitos:
+
+<H4><A NAME="SECTION04130010000000000000">
+Requisitos</A>
+</H4>
+  
 
 <P>
 
@@ -178,14 +184,14 @@ de los apuntes de LPP
 
 <P>
 
-<H4><A NAME="SECTION04130010000000000000">
+<H4><A NAME="SECTION04130020000000000000">
 Karma</A>
 </H4>
   
 
 <P>
 
-<H4><A NAME="SECTION04130020000000000000">
+<H4><A NAME="SECTION04130030000000000000">
 Karma: Como Funciona</A>
 </H4>
   
@@ -193,7 +199,7 @@ Karma: Como Funciona</A>
 <P>
 
 <UL>
-<LI><A NAME="3319"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
+<LI><A NAME="3324"></A><SPAN  CLASS="textbf">Karma</SPAN> (See 
 <A NAME="tex2html65"
   HREF="http://karma-runner.github.io/0.10/intro/installation.html">Karma installation</A>)
 is essentially a tool which spawns a web server that executes source
@@ -230,7 +236,7 @@ the test code again.
 </LI>
 <LI>Each browser then loads the source files inside an
 <code>IFrame</code><A NAME="tex2html64"
-  HREF="footnode.html#foot3312"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
+  HREF="footnode.html#foot3317"><SUP><SPAN CLASS="arabic">1</SPAN>.<SPAN CLASS="arabic">1</SPAN></SUP></A>, 
 executes the tests and reports the results back to the server.
 </LI>
 <LI>The server collects the results from all of the captured browsers and presents them to the developer.
@@ -239,7 +245,7 @@ executes the tests and reports the results back to the server.
 
 <P>
 
-<H4><A NAME="SECTION04130030000000000000">
+<H4><A NAME="SECTION04130040000000000000">
 Karma: Videos</A>
 </H4>
   
@@ -261,7 +267,7 @@ Vojta Jína. YouTube
 
 <P>
 
-<H4><A NAME="SECTION04130040000000000000">
+<H4><A NAME="SECTION04130050000000000000">
 Karma: Opciones en Línea de Comandos</A>
 </H4>
   
@@ -288,7 +294,7 @@ Options:
 
 <P>
 
-<H4><A NAME="SECTION04130050000000000000">
+<H4><A NAME="SECTION04130060000000000000">
 Karma: Generando el Fichero de Configuración</A>
 </H4>
   
@@ -426,7 +432,7 @@ module.exports = function(config) {
 
 <P>
 
-<H4><A NAME="SECTION04130060000000000000">
+<H4><A NAME="SECTION04130070000000000000">
 Arrancando Karma. Starting Karma</A>
 </H4>
   
@@ -475,7 +481,7 @@ Options:
 
 <P>
 
-<H4><A NAME="SECTION04130070000000000000">
+<H4><A NAME="SECTION04130080000000000000">
 Using Karma with Mocha</A>
 </H4>
   
@@ -601,7 +607,7 @@ Another example can be found at
 
 <P>
 
-<H4><A NAME="SECTION04130080000000000000">
+<H4><A NAME="SECTION04130090000000000000">
 Algunas dependencias para ejecutar Karma</A>
 </H4>
   
@@ -623,7 +629,7 @@ instalar unos cuantos módulos. Vea este fragmento de <code>package.json</code>
 
 <P>
 
-<H4><A NAME="SECTION04130090000000000000">
+<H4><A NAME="SECTION041300100000000000000">
 Load HTML files with Karma</A>
 </H4>
   
@@ -667,7 +673,7 @@ preprocessors = {
   '**/*.html': 'html2js'
 };
 </PRE>
-<H4><A NAME="SECTION041300100000000000000">
+<H4><A NAME="SECTION041300110000000000000">
 tests/tests.js usando Karma y Considerando el HTML</A>
 </H4>
   
@@ -706,7 +712,7 @@ suite('temperature', function() {
 
 <P>
 
-<H4><A NAME="SECTION041300110000000000000">
+<H4><A NAME="SECTION041300120000000000000">
 tests/test.html usando Karma y Considerando el HTML</A>
 </H4>
   
@@ -743,7 +749,7 @@ Obsérvese que no cargamos <code>mocha</code>, etc porque son cargados por Karma
 
 <P>
 
-<H4><A NAME="SECTION041300120000000000000">
+<H4><A NAME="SECTION041300130000000000000">
 Karma y HTML: Véase</A>
 </H4>
   
@@ -762,7 +768,7 @@ in StackOverflow.
 
 <P>
 
-<H4><A NAME="SECTION041300130000000000000">
+<H4><A NAME="SECTION041300140000000000000">
 Karma y Gulp</A>
 </H4>
   
@@ -807,19 +813,19 @@ gulp.task('default', function() {
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1001"
+<A NAME="tex2html1002"
   HREF="node11.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html995"
+<A NAME="tex2html996"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html989"
+<A NAME="tex2html990"
   HREF="node9.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html997"
+<A NAME="tex2html998"
   HREF="node90.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html999"
+<A NAME="tex2html1000"
   HREF="node93.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -859,11 +865,11 @@ gulp.task('default', function() {
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1002"
+<B> Sig:</B> <A NAME="tex2html1003"
   HREF="node11.html">Práctica: Comma Separated Values.</A>
-<B>Sup:</B> <A NAME="tex2html996"
+<B>Sup:</B> <A NAME="tex2html997"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html990"
+<B> Ant:</B> <A NAME="tex2html991"
   HREF="node9.html">Práctica: Conversor de Temperaturas</A>
 </DIV>
 <!--End of Navigation Panel-->
